--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -134,3 +134,116 @@ body {
     z-index: 2;
 }
 
+.section.five {
+    margin-top:256px;
+    display:block!important;
+}
+
+.section.five .headline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity:0;
+}
+
+.section.five .headline-separator {
+    width:100%;
+    height:0;
+    margin-bottom:96px;
+}
+
+.section.five .headline .svg-icon path {
+    stroke-dasharray: 900;
+    stroke-dashoffset: 400;
+    stroke-width: 10px;
+    stroke-linecap: round;
+    fill:transparent;
+    stroke:var(--colors-light);
+}
+
+.section.five .headline.one .svg-icon path {
+    stroke-width: 1px;
+    stroke-dasharray: 300;
+}
+
+.section.five .headline.five .svg-icon path {
+    stroke-dasharray: 1400;
+}
+
+.section.six {
+    margin-top: 256px;
+}
+
+.bento {
+    background-color: transparent;
+    display: grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-areas:
+        "finish shield shield"
+        "sizes sizes edge"
+        "water water edge";
+    grid-template-columns: 380px 1fr 2fr;
+    grid-template-rows: 546px 234px 234px;
+}
+
+.bento-box {
+    height:fit-content;
+    width:fit-content;
+}
+
+.bento.primary .bento-box {
+    background-color:var(--colors-primary);
+}
+
+.bento.secondary .bento-box {
+    background-color:var(--colors-secondary);
+}
+
+.bento.accent .bento-box {
+    background-color:var(--colors-accent);
+}
+
+
+[data-grid-area=one].bento-box {
+    grid-column:1;
+    grid-row:1;
+}
+
+[data-grid-area=two].bento-box {
+    grid-column:2/4;
+    grid-row:1;
+}
+
+[data-grid-area=three].bento-box {
+    grid-column:1/3;
+    grid-row:2;
+}
+
+[data-grid-area=four].bento-box {
+    grid-column:3;
+    grid-row:2/4;
+}
+
+[data-grid-area=five].bento-box {
+    grid-column:1/3;
+    grid-row:3;
+}
+
+.bento-box {
+    width:inherit;
+    height:inherit;
+}
+
+.bento-box.one .text-content {
+    margin-bottom: 324px;
+    padding: 37px 41px;
+    width:343px
+}
+
+.bento-box.two .text-content {
+    padding-top: 300px;
+    padding-left: 45px;
+    padding-bottom: 37px;
+    width:400px;
+}
