--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -128,6 +128,7 @@ body {
     align-items: flex-end!important;
     transition: transform 50ms linear 0s;
     background-image: url(../img/spaceBackground/green/2.png);
+    background-size:cover;
 }
 
 .section.four * {
@@ -149,12 +150,17 @@ body {
 .section.five .headline-separator {
     width:100%;
     height:0;
-    margin-bottom:96px;
+    margin-bottom:256px;
 }
+
+.headline .svg-icon svg {
+    overflow: visible;
+}
+
 
 .section.five .headline .svg-icon path {
     stroke-dasharray: 900;
-    stroke-dashoffset: 400;
+    stroke-dashoffset: 800;
     stroke-width: 10px;
     stroke-linecap: round;
     fill:transparent;
@@ -174,6 +180,11 @@ body {
     margin-top: 256px;
 }
 
+.bento-container {
+    width:75%;
+    height:1656px;
+}
+
 .bento {
     background-color: transparent;
     display: grid;
@@ -183,8 +194,9 @@ body {
         "finish shield shield"
         "sizes sizes edge"
         "water water edge";
-    grid-template-columns: 380px 1fr 2fr;
-    grid-template-rows: 546px 234px 234px;
+    grid-template-columns: 425px 1fr 341px;
+    grid-template-rows: 546px auto 234px;
+    height:100%
 }
 
 .bento-box {
@@ -202,6 +214,10 @@ body {
 
 .bento.accent .bento-box {
     background-color:var(--colors-accent);
+}
+
+.bento-box.color-animation {
+    background-color:var(--color-animation-changed)!important;
 }
 
 
@@ -233,6 +249,7 @@ body {
 .bento-box {
     width:inherit;
     height:inherit;
+    overflow:hidden;
 }
 
 .bento-box.one .text-content {
@@ -246,4 +263,42 @@ body {
     padding-left: 45px;
     padding-bottom: 37px;
     width:400px;
+}
+
+.bento-box {
+    position: relative;
+    display:inline-block;
+}
+
+.bento-box.one .bento-figure {
+    background-position-y: bottom;
+    width: 100%;
+    height: inherit;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url(../img/svg/sketches/4S1ft801.svg);
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+
+.bento-box.two .bento-figure {
+    background-position-y: bottom;
+    width: 100%;
+    height: inherit;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url(../img/svg/sketches/3tSOJh01.svg);
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+
+
+.headline.colored .svg-icon path {
+    stroke:var(--headline-color)!important;
+}
+
+.headline.colored .text {
+    color:var(--headline-color);
 }
