--- a/assets/css/activity-panel.css
+++ b/assets/css/activity-panel.css
@@ -7,7 +7,7 @@
 .activity-panel-container {
     min-height:1px;
     padding:0 16px;
-    width: fit-content;
+    width: 45%;
 }
 
 .activity-panel {
@@ -24,6 +24,8 @@
     padding: 4rem 2rem;
     position: relative;
     z-index: 3!important;
+    width: 100%;
+    --activity-panel-width: 100%;
 }
 
 .activity-panel-border {
@@ -98,8 +100,7 @@
 }
 
 .activity-panel-body {
-    width:var(--activity-panel-width,45vw);
-    min-height:var(--activity-panel-height,350px);
+    width:var(--activity-panel-width,100%);
 }
 
 .activity-panel .text.one {
@@ -121,4 +122,32 @@
 
 .activity-panel .text.three {
     color:white;
+}
+
+@media screen and (max-width:1040px) {
+    .activity-panels {
+        flex-direction: column;
+        width: 90%;
+        align-items: center;
+    }
+
+    .activity-panel-container {
+        width: 100%;
+    }
+
+    .activity-panel {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:450px) {
+    .activity-panel .text.one {
+        letter-spacing: 0.25em;
+        font-size: 24px;
+    }
+
+    .activity-panel .text.two,
+    .activity-panel .text.three {
+        font-size: 12px;
+    }
 }
