--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,10 @@
     /*display:none;*/
 }
 
+::selection {
+    background-color: rgba(var(--colors-light-rgb),.5);
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -57,6 +61,8 @@ nav ol, nav ul {
     color: var(--colors-light);
     width:fit-content;
     font-size:16px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .text.link,a {
@@ -110,8 +116,6 @@ nav ol, nav ul {
     color: var(--colors-primary);
 }
 
-
-
 em {
     font-style:normal;
     display:inline-block;
@@ -161,3 +165,486 @@ em {
 .box {
     border-radius:16px;
 }
+
+.fake {
+    opacity:0;
+}
+
+.section-parallax-background * {
+    z-index:2;
+}
+
+.section-parallax-background .section-background {
+    position:absolute;
+    top:0;
+    left:0;
+    width:inherit;
+    height:inherit;
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
+    z-index:1;
+}
+
+.bento-container {
+    width:75%;
+    height: 1340px;
+}
+
+.bento {
+    background-color: transparent;
+    display: grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-areas:
+        "finish shield shield"
+        "sizes sizes edge"
+        "water water edge";
+    grid-template-columns: 425px 1fr 341px;
+    grid-template-rows: 546px auto 339px;
+    height:100%
+}
+
+.bento-box {
+    height:fit-content;
+    width:fit-content;
+}
+
+.bento.primary .bento-box {
+    --bento-color:var(--colors-primary);
+}
+
+.bento.secondary .bento-box {
+    --bento-color:var(--colors-secondary);
+}
+
+.bento.accent .bento-box {
+    --bento-color:var(--colors-accent);
+}
+
+.bento-box.color-animation {
+    --bento-color:var(--color-animation-changed)!important;
+}
+
+.bento-box {
+    width:inherit;
+    height:inherit;
+    overflow:hidden;
+
+    position: relative;
+    display:inline-block;
+    background-color:var(--bento-color);
+}
+
+.bento-box * {
+    z-index: 1;
+}
+
+.activity-panel-body {
+    overflow: hidden;
+}
+
+.price-cards {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-around;
+}
+
+.price-card {
+    padding:24px;
+    display: flex;
+    flex-direction:column;
+    background-color: var(--colors-grey-500);
+    border-radius: 1em;
+    min-width: 300px;
+}
+
+.price-card-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.price-card-header .text.one {
+    font-size:20px;
+}
+
+.price-card-price .one {
+    font-size:32px;
+}
+
+.price-card-price .two,
+.price-card-price .three {
+    font-size: 48px;
+}
+
+.price-card-price .four {
+    font-size: 16px;
+}
+
+.price-card-separator {
+    width:90%;
+    height:3px;
+    background-color:var(--colors-light);
+    margin-top:16px;
+    margin-bottom:16px;
+    align-self: center;
+}
+
+.price-card-features {
+    margin-bottom:16px; 
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.price-card-link,
+.section.seven .link {
+    color:var(--colors-grey-200);
+    transition:color 200ms linear;
+}
+
+.price-card-link:hover,
+.section.seven .link:hover {
+    color:var(--colors-light);
+}
+
+.price-card-footer {
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+}
+
+.price-card-button {
+    border-radius:1em;
+    background-color:var(--colors-accent-light);
+}
+
+.link.slide-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding:0 8px;
+    outline-offset: -7px;
+}
+
+.link.slide-link::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0%;
+    height: 2px;
+    bottom: 0px;
+    left: 9px;
+    background-color: var(--colors-light);
+    transition: width 200ms ease;
+}
+
+.link.slide-link:hover::before {
+    width: calc(100% - 15px);
+}
+
+.btn .btn-content {
+    text-transform: uppercase;
+}
+
+.btn.btn-slide {
+    color: var(--colors-light);
+    border-color: rgba(var(--colors-light-rgb),.15);
+    background-color: transparent;
+    border-radius: 0.4rem;
+    border-style: solid;
+    position: relative;
+    display: inline-block;
+    padding: 1em 1.6em;
+    overflow: hidden;
+    transition: border-color .2s ease;
+    cursor: pointer;
+}
+
+.btn.btn-slide:hover {
+    border-color: var(--colors-light);
+}
+
+.btn.btn-slide::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: var(--colors-light);
+    opacity: .15;
+    position: absolute;
+    transition: left .2s ease;
+    top: 0;
+    left: 100%;
+}
+
+.btn.btn-slide:hover::before {
+    left: 0;
+}
+
+.link {
+    opacity: 0.75;
+    transition: opacity 200ms linear;
+}
+
+.link:hover {
+    opacity:1;
+}
+
+[data-grid-area=one].bento-box {
+    grid-column:1;
+    grid-row:1;
+}
+
+[data-grid-area=two].bento-box {
+    grid-column:2/4;
+    grid-row:1;
+}
+
+[data-grid-area=three].bento-box {
+    grid-column:1/3;
+    grid-row:2;
+}
+
+[data-grid-area=four].bento-box {
+    grid-column:3;
+    grid-row:2/4;
+}
+
+[data-grid-area=five].bento-box {
+    grid-column:1/3;
+    grid-row:3;
+}
+
+.bento-box.one .text-content {
+    margin-bottom: 324px;
+    padding: 37px 41px;
+    width:100%
+}
+
+.bento-box.one .text-content .text {
+    width: 100%;
+    text-align: end;
+}
+
+.bento-box.two .text-content {
+    padding-top: 177px;
+    padding-left: 107px;
+    padding-bottom: 37px;
+    width: 400px;
+}
+
+.bento-box.three .text-content {
+    width:50%;
+    margin-top:22%;
+    padding-left: 32px;
+}
+
+.bento-box.four .text-content {
+    margin-top: 269px;
+    padding: 36px 40px;
+    width: fit-content;
+    margin-left: 36px;
+}
+
+.bento-box .bento-figure {
+    background-position-y: bottom;
+    width: 100%;
+    height: inherit;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+
+.bento-box.one .bento-figure.one {
+    background-image: url(../img/svg/sketches/4S1ft801.svg);
+}
+
+.bento-box.one .bento-figure.two {
+    background-image: url(../img/backpack/black2.png);
+    background-position-x: -102px;
+    background-position-y: -35px;
+    transform-origin: top left;
+    transform: rotate(6deg);
+}
+
+.bento-box.two .bento-figure.one {
+    background-image: url(../img/svg/sketches/3tSOJh01.svg);
+}
+
+.bento-box.two .bento-figure.two {
+    background-image: url(../img/backpack/blue2.png);
+    background-position-x: 184px;
+    background-position-y: 159px;
+}
+
+.bento-box.three .bento-figure.one {
+    background-image: url(../img/backpack/pink2.png);
+    background-position-x: right;
+}
+
+.bento-box.four .bento-figure.one {
+    background-image: url(../img/backpack/green2.png);
+}
+
+.bento-box.five .bento-figure.one {
+    background-image: url(../img/backpack/silver2.png);
+    background-position-x: -36px;
+}
+
+.bento-box.five .text-content {
+    width: 40%;
+    margin-left: 55%;
+    text-align: right;
+    margin-top: 20%;
+}
+
+@media screen and (max-width:1040px) {
+    .bento-container {
+        height:1480px;
+    }
+
+    .bento {
+        grid-template-columns: 1fr;
+        grid-template-rows: 3fr 3fr 6fr 3fr 2fr;
+        grid-column-gap: 0;
+        grid-row-gap: 64px;
+    }
+
+    [data-grid-area=one].bento-box {
+        grid-column:1;
+        grid-row:1;
+    }
+
+    [data-grid-area=two].bento-box {
+        grid-column:1;
+        grid-row:2;
+    }
+
+    [data-grid-area=three].bento-box {
+        grid-column:1;
+        grid-row:3;
+    }
+
+    [data-grid-area=four].bento-box {
+        grid-column:1;
+        grid-row:4;
+    }
+
+    [data-grid-area=five].bento-box {
+        grid-column:1;
+        grid-row:5;
+    }
+
+    .bento-box.one .bento-figure.one,
+    .bento-box.two .bento-figure.one {
+        display:none;
+    }
+
+    .bento-box.one .bento-figure.two {
+        background-position-x: left;
+        background-position-y: center;
+        transform: rotate(0deg);
+    }
+
+    .bento-box.two .bento-figure.two {
+        background-position-x: right;
+        background-position-y: center;
+    }
+
+    .bento-box.three .bento-figure.one {
+        background-position-x: right;
+        transform: translateX(12%) translateY(10%);
+    }
+
+    .bento-box.five .bento-figure.one {
+        background-position-x: center;
+        background-position-y: 42px;
+    }
+
+    .bento-box.one .text-content {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        padding: 0;
+        padding-right: 6%;
+        width: 100%;
+        height: 100%;
+    }
+
+    .bento-box.two .text-content {
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        padding-left: 6%;
+    }
+
+    .bento-box.three .text-content {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        padding-top: 32px;
+        padding-left: 6%;
+    }
+
+    .bento-box.four .text-content {
+        display: flex;
+        height: 100%;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        justify-content: flex-end;
+        padding-right: 6%;
+        align-items: center;
+        text-align: right;
+    }
+
+    .bento-box.five .text-content {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        padding-top: 16px;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width:864px) {
+    .price-cards {
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width:413px) {
+    .price-card-features .text {
+        font-size:12px;
+        text-align:center;
+    }
+
+    .price-card-price .one {
+        font-size:18px;
+    }
+
+    .price-card-price .two, .price-card-price .three {
+        font-size: 32px;
+    }
+
+    .price-card-price .four {
+        font-size:10px;
+    }
+}
+
+@media screen and (max-width:326px) {
+    .price-card {
+        padding: 24px 12px;
+    }
+}
+
