--- a/assets/css/main-forinfo.css
+++ b/assets/css/main-forinfo.css
@@ -27,6 +27,7 @@ em classes:
 
 .section-content.fixed-width will set the width to 1440px, and will set the width to 100% when the viewport width is less than 1440px
 */
+ 
 
 :root {
     --scrollbar-display:initial;
@@ -38,15 +39,18 @@ em classes:
     --selected-text-background-color:rgba(255,255,255,.5);
     --selected-text-color:unset;
 
-    --body-background:#fff;
+    --body-background-color:rgba(6,6,6,1);
+    --body-background:radial-gradient(circle, rgba(62,62,62,1) 0%, rgba(10,10,10,1) 65%, rgba(6,6,6,1) 97%);;
 
     --link-previsited-color:var(--colors-accent);
 
-    --font-one:"Rubik";
-    --font-two:"Roboto";
-    --font-three:"Rubik Mono One";
-    --font-four:"IBM Plex Sans";
-    --font-monospace:Monospace;
+    --font-sans-serif:"Helvetica", "Arial", sans-serif;
+
+    --font-one:"Rubik",var(--font-sans-serif);
+    --font-two:"Roboto",var(--font-sans-serif);
+    --font-three:"Rubik Mono One",var(--font-sans-serif);
+    --font-four:"IBM Plex Sans",var(--font-one);
+    --font-monospace:"Source Code Pro","consolas",monospace;
     
     --font-body:var(--font-one);
     --font-header:var(--font-two);
@@ -119,12 +123,15 @@ html {
     -webkit-text-size-adjust: 100%;
 }
 
+
 body {
     min-height:100vh;
     min-width:320px;
     width:100vw;
     overflow-x:hidden;
+    background-color:var(--body-background-color);
     background:var(--body-background);
+    background-attachment: fixed;
     text-rendering: optimizeSpeed;
     margin: 0;
     padding: 0;
