--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -1,3 +1,11 @@
+:root {
+    --colors-primary:#5da6b5;
+    --colors-secondary:#145e80;
+
+    --colors-primary-rgb:93, 166, 181;
+    --colors-secondary-rgb:20, 94, 128;
+}
+
 .section {
     display:flex;
     align-items:center;
@@ -188,6 +196,10 @@
     transition: opacity 200ms linear;
 }
 
+.section.four .section-header {
+    display:none;
+}
+
 .timeline-container {
     position:relative;
     width: 1180px; 
@@ -246,6 +258,10 @@
     top: 0px;
     width: 300px;
     height: 516px;
+}
+
+.timeline-item-content {
+    position: absolute;
 }
 
 .timeline-item-line,.timeline-item-circle {
@@ -310,6 +326,7 @@
 .section.five .section-header-content {
     display: flex;
     flex-direction:column;
+    align-items: center;
 }
 
 .compare-vertical-graph {
@@ -354,7 +371,7 @@
 .compare-vertical-graph-item-content {
     display: flex;
     flex-wrap: nowrap;
-    flex-direction: column;
+    flex-direction: column-reverse;
 }
 
 .compare-horizontal-graph {
@@ -405,10 +422,6 @@
 }
 
 @media only screen and (max-width:380px) {
-    .section.two {
-        margin-left:64px;
-    }
-
     .section.two .section-header .text {
         font-size:36px
     }
@@ -451,4 +464,217 @@
 
 .roadmap .roadmap-item-text-body .text {
     font-size: 14px;
+}
+
+.horizontal-section-container {
+    padding-top:52px;
+}
+
+@media only screen and (max-width:1200px) {
+    .section.three .section-content {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width:980px) {
+    .section:not(.one):not(.seven) {
+        width:fit-content;
+    }
+
+    .section.three .section-content {
+        width: 980px;
+    }
+}
+
+@media only screen and (max-width:820px) {
+    .section.three .section-content {
+        width: 100vw;
+    }
+
+    .section.three .section-body {
+        width: fit-content;
+    }
+
+
+    .section.three .bullet-points-container {
+        flex-direction: column;
+    }
+
+    .section.three .bullet-point:not(:last-child) {
+        margin-bottom:32px;
+    }
+}
+
+@media only screen and (max-width: 680px) {
+    .horizontal-section-container {
+        max-width: 100vw;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        overflow-x: hidden;
+        height: fit-content;
+    }
+
+    .section {
+        margin-bottom:128px;
+    }
+
+    .section.four .section-header {
+        display:initial;
+    }
+
+    .section.four .timeline-line,
+    .section.four .timeline-item-line, 
+    .section.four .timeline-item-circle,
+    .section.four .timeline-marker {
+        display:none;
+    }
+
+    .section.four .timeline-item {
+        position: static;
+        width: fit-content;
+        height: fit-content;
+    }    
+
+    .section.four .timeline-container {
+        max-width: 100vw;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        height: fit-content;
+    }
+
+    .section.four .timeline-item:not(.seven) {
+        margin-bottom:64px;
+    }
+
+    .section.four .timeline-item-content,
+    .section.four .timeline-item-icon-content,
+    .section.four .timeline-item-text-container {
+        position:static;
+    }
+
+    .section.four .timeline-item-content,
+    .section.four .timeline-item-text-container {
+        height: fit-content!important;
+    }
+
+    .section.four .timeline-item-content {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+
+    .section.four .timeline-item-icon-container {
+        align-items: flex-start;
+    }
+
+    .section.five .compare-vertical-graph {
+        flex-direction: column;
+    }
+
+    .section.five .compare-vertical-graph .compare-vertical-graph-item {
+        margin-bottom:128px;
+    }
+
+    .section.six .section-content {
+        width: 100vw;
+    }
+
+    .section.six .section-body {
+        width: 100vw!important;
+        overflow-x: hidden;
+    }
+
+    .section.six .roadmap {
+        height: fit-content;
+        padding-top: calc(414px + 32px);
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+    }
+
+    .section.six .roadmap .roadmap-road {
+        top: 0px;
+        left: -626px;
+    }
+
+    .section.six .roadmap .roadmap-item-container {
+        position: static;
+    }
+
+    .section.eight .section-body {
+        flex-direction: column;
+    }
+
+    .section.eight .tray-sosumi {
+        display: none;
+    }
+
+    .section.eight .tray-container {
+        width: 80%;
+        height: 216px;
+        flex-direction: column;
+    }
+
+    .section.eight .tray-container .tray-element {
+        width: 100%;
+    }
+
+    .section.eight .tray-container .tray-section {
+        flex-direction: row;
+    }
+
+    .section.eight .tray-container .tray-headline-separator {
+        height: 80%;
+        width: 1px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+    .section.eight .graph .graph-root {
+        width: 100%;
+    }
+
+    .section.eight .graph .graph-title .text {
+        text-align: center;
+    }
+    
+    .section.nine .section-body {
+        transform: scale(0.5);
+    }
+
+}
+
+@media only screen and (max-width:530px) {
+    .section.nine .section-body {
+        transform: scale(1);
+    }
+
+    .section.nine .compare-horizontal-graph-icons {
+        display: none;
+    }
+
+    .section.nine .compare-horizontal-graph-item {
+        width: auto;
+    }
+}
+
+@media only screen and (max-width:480px) {
+    .section .section-content {
+        padding-left:0px;
+        padding-right:0px;
+    }
+}
+
+@media only screen and (max-width:380px) {
+    .section.three .section-content {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
 }
